# zugzwang

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/versions/: 4abef1ddb4c2_create_initial_tables.py  991b06dbe96b_create_games_table.py
app/: main.py
app/api/: dependencies.py  deps.py  exception_handlers.py  main.py  schemas.py
app/api/route/: game_routes.py  position_routes.py  util_routes.py
app/api/routes/: games.py  positions.py  utils.py
app/api/schema/: error_schemas.py  game_schemas.py  position_schemas.py
app/api/service/: __init__.py  game_service.py  position_service.py
app/core/: crud.py  db.py  models.py  schemas.py
app/db/: __init__.py  models.py
app/service/: base_service.py  exceptions.py  game_service.py  position_service.py
scripts/: dev.sh  lint.sh  test.sh
tests/api/route/: test_position_routes.py  test_util_routes.py
tests/db/: __init__.py
