[project]
name = "zugzwang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiotempfile>=0.5.4",
    "alembic>=1.13.3",
    "chess>=1.11.0",
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.9.2",
    "python-multipart>=0.0.12",
    "sqlalchemy-repr>=0.1.0",
    "sqlalchemy>=2.0.35",
]
