[project]
name = "zugzwang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "aiosqlite>=0.20.0",
    "alembic>=1.13.3",
    "chess>=1.11.0",
    "fastapi-cache2[redis]>=0.2.2",
    "fastapi[standard]>=0.115.0",
    "pydantic>=2.9.2",
    "python-multipart>=0.0.12",
    "sqlalchemy-repr>=0.1.0",
    "sqlalchemy[asyncio]>=2.0.35",
]

[tool.uv]
dev-dependencies = [
    "coverage>=7.6.1",
    "pytest>=8.3.3",
    "ruff>=0.6.9",
]
